RESOLVED FIXED219419
Fix for accessibility attributed string tests in isolated mode.
https://bugs.webkit.org/show_bug.cgi?id=219419
Summary Fix for accessibility attributed string tests in isolated mode.
Andres Gonzalez
Reported 2020-12-01 18:23:57 PST
Fix for accessibility attributed string tests in isolated mode.
Attachments
Patch (5.76 KB, patch)
2020-12-01 18:33 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-12-01 18:33:04 PST
EWS
Comment 2 2020-12-01 19:41:41 PST
Committed r270340: <https://trac.webkit.org/changeset/270340> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415185 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-01 19:42:15 PST
Note You need to log in before you can comment on or make changes to this bug.